# accelforge

./: .buildinfo  .gitattributes  .gitignore  CITATION.cff  Dockerfile  Einsum YAMLs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  accelforge.frontend.arch.html  accelforge.frontend.html  accelforge.frontend.mapper.html  accelforge.frontend.mapping.html  accelforge.html  accelforge.mapper.FFM.html  accelforge.mapper.html  accelforge.model.html  accelforge.plotting.html  accelforge.util.html  docker-compose.yaml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  validate_spatial_keep_code
.doctrees/: accelforge.doctree  accelforge.frontend.arch.doctree  accelforge.frontend.doctree  accelforge.frontend.mapper.doctree  accelforge.frontend.mapping.doctree  accelforge.mapper.FFM.doctree  accelforge.mapper.doctree  accelforge.model.doctree  accelforge.plotting.doctree  accelforge.util.doctree  index.doctree  modules.doctree
_modules/: enum.html  index.html
_sources/: accelforge.frontend.arch.rst.txt  accelforge.frontend.mapper.rst.txt  accelforge.frontend.mapping.rst.txt  accelforge.frontend.rst.txt  accelforge.mapper.FFM.rst.txt  accelforge.mapper.rst.txt  accelforge.model.rst.txt  accelforge.plotting.rst.txt  accelforge.rst.txt  accelforge.util.rst.txt  index.rst.txt  modules.rst.txt
accelforge/: _accelerated_imports.py  _version.py  examples.py
doc/: installing.md
docker/: Makefile  README.md  docker-compose.yaml
docs/: conf.py
fastfusion/: __init__.py  examples.py  layerdeduplication.py  pareto.py  tags.py  util.py  version.py
guide/: citation.html  contributing.html  definitions.html  faqs.html  guide.html  modeling.html  spec.html  timeloop_compare.html
notebooks/: arch_study.ipynb  background.ipynb  bug_demo.ipynb  comments.py  demo.ipynb  fastfusion.ipynb  fastfusion_arch_study_michael.ipynb  hpca_arch_study.ipynb  loopforest_mobilenet.ipynb  mapper.ipynb  mapper.py  mapper_storage_permute_first.ipynb  mapping_visualization.ipynb  mha_snowcat.ipynb  micro_arch_study.ipynb  micro_arch_study_plots.ipynb  mixed_matmul_snowcat.ipynb  mobilenet.ipynb  notebook_include_fastfusion.py  paper_asplos_fastfusion_arch_study.ipynb  paths.py  rebuttal_fastfusion.ipynb  rebuttal_fastfusion_2 copy 2.ipynb  rebuttal_fastfusion_2 copy 3.ipynb  rebuttal_fastfusion_2 copy.ipynb  rebuttal_fastfusion_2.ipynb  rebuttal_fastfusion_3.ipynb  rebuttal_loopforest.ipynb  snowcat_experiments.py  test.ipynb  timeloop_compare.ipynb  zigzag_compare.ipynb
tests/: Q_mapping.yaml  conv.mapping.yaml  conv.workload.yaml  conv_sym.mapping.yaml  four_level.arch.yaml  hwcomponents_expected.json  matmul.mapping.yaml  matmul.workload.yaml  matmul_spatial.mapping.yaml  mha.renames.yaml  mha.workload.yaml  mha.yaml  (+29 more)
(+793 files in other folders)
